# NostalgiaOS

./: .gitignore  Cargo.toml  README.md  build.sh  run-qemu-gui.sh  run-qemu.sh  rust-toolchain.toml
.cargo/: config.toml
assets/icons/: convert_icons.py  convert_start_bmp.py
boot/uefi-loader/: Cargo.toml
boot/uefi-loader/src/: kernel.rs  main.rs  paging.rs  serial.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: framebuffer.rs  main.rs  serial.rs
kernel/src/arb/: arbiter.rs  mod.rs  ordering.rs  range.rs
kernel/src/arch/: mod.rs
kernel/src/cc/: lazywrite.rs  mod.rs  prefetch.rs
kernel/src/cm/: cell.rs  hive.rs  key.rs  mod.rs  operations.rs  value.rs
kernel/src/csr/: console.rs  mod.rs  process.rs  server.rs  session.rs
kernel/src/dbgk/: debug_object.rs  event.rs  mod.rs  notify.rs
kernel/src/drivers/: mod.rs  serial.rs
kernel/src/etw/: buffer.rs  event.rs  logger.rs  mod.rs  provider.rs
kernel/src/ex/: atom.rs  callback.rs  delay.rs  event_pair.rs  eventlog.rs  fast_mutex.rs  harderr.rs  interlocked.rs  keyed_event.rs  ktm.rs  lookaside.rs  luid.rs  mod.rs  nbqueue.rs  pooltag.rs  probe.rs  profile.rs  pushlock.rs  raise.rs  resource.rs  rundown.rs  slist.rs  sysinfo.rs  timezone.rs  uuid.rs  wer.rs  worker.rs  zone.rs
kernel/src/fs/: clfs.rs  dfs.rs  efs.rs  mod.rs  mount.rs  msfs.rs  npfs.rs  path.rs  rdbss.rs  vfs.rs  volume.rs
kernel/src/fsrtl/: fastio.rs  fcb.rs  filelock.rs  fltmgr.rs  mcb.rs  mod.rs  name.rs  notify.rs  oplock.rs  stackovf.rs  tunnel.rs  unc.rs
kernel/src/fstub/: geometry.rs  gpt.rs  mbr.rs  mod.rs
(+515 files in other folders)
