[workspace]
resolver = "2"
members = [
    "boot/uefi-loader",
    "kernel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nostalgia OS Contributors"]
license = "MIT"
repository = "https://github.com/nostalgia-os/nostalgia-os"

[workspace.dependencies]
log = "0.4"
spin = "0.9"
bitflags = "2.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
